--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -1,4 +1,4 @@
-"Error levels to log only:","Fehlerstufen, die nur dokumentiert werden:"
-"Error levels to report:","Fehlerstufen, die gemeldet werden:"
+"Error levels to log only:","Error levels to log only:"
+"Error levels to report:","Error levels to report:"
 "PHP Info","PHP Info"
 "System Info",System-Info
